--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,29 @@
 {
   "functions": {
     "runtime": "nodejs20",
-    "predeploy": [
-      "npm --prefix frontend run build"
-    ],
     "source": "functions"
   },
   "hosting": {
+    "target": "mfi",
     "public": "public",
+    "headers": [
+      {
+        "source": "/service-worker.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "predeploy": [
+      "npm --prefix frontend run build"
     ],
     "rewrites": [
       {
