--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.10",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-react-jsx": "^7.12.17",
     "@babel/preset-env": "^7.13.10",
+    "@chakra-ui/icons": "^1.0.17",
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
@@ -88,7 +90,7 @@
     "@uppy/google-drive": "^1.7.1",
     "@uppy/url": "^1.5.22",
     "@uppy/xhr-upload": "^1.7.5",
-    "axios": "^1.6.8",
+    "axios": "^1.13.2",
     "chart.js": "^3.5.0",
     "dayjs": "^1.10.5",
     "draft-js": "^0.11.7",
